<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlancheS"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bloc_contenu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

          <ScrollView
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginLeft="20dp"
                  android:layout_marginRight="20dp"
                  android:layout_marginTop="10dp"
                  android:orientation="vertical">

                  <RelativeLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:fontFamily="@font/roboto"
                          android:textColor="@color/colorEU"
                          android:textSize="@dimen/txt_titre"
                          android:text="Payer un reabonnement CANAL+"
                          android:textStyle="bold"
                          android:layout_marginTop="0dp"/>

                      <ImageView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:visibility="gone"
                          android:src="@drawable/ic_info_bleu"
                          android:layout_alignParentRight="true"/>

                  </RelativeLayout>


                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_marginTop="10dp">

                      <RelativeLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/subscriber_account_number"
                              android:textSize="@dimen/txt_normal"
                              android:fontFamily="@font/roboto_light"
                              android:textColor="@color/colorNoir" />

                          <TextView
                              android:id="@+id/numeroAbonnement"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:textSize="@dimen/txt_normal"
                              android:textStyle=""
                              android:layout_alignParentRight="true"
                              android:fontFamily="@font/roboto_light"
                              android:textColor="@color/colorEU" />


                      </RelativeLayout>



                      <RelativeLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="30dp">

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/a"
                              android:text="@string/offer_name"
                              android:layout_centerVertical="true"
                              android:textSize="@dimen/txt_normal"
                              android:fontFamily="@font/roboto_light"
                              android:textColor="@color/colorNoir" />

                          <TextView
                              android:id="@+id/nomOffre"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_toRightOf="@+id/a"
                              android:layout_marginLeft="8dp"
                              android:gravity="right"
                              android:textSize="@dimen/txt_titre"
                              android:layout_alignParentRight="true"
                              android:fontFamily="@font/roboto"
                              android:textStyle="bold"
                              android:textColor="@color/colorNoir" />


                      </RelativeLayout>

                      <View
                          android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="@color/colorNoir3"
                          android:layout_marginTop="8dp"/>

                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:padding="7dp"
                          android:background="@drawable/contour_5"
                          android:orientation="vertical">

                          <RelativeLayout
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="10dp">

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="Devise"
                                  android:textSize="@dimen/txt_small"
                                  android:fontFamily="@font/roboto_light"
                                  android:textColor="@color/colorNoir" />

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_alignParentRight="true"
                                  android:fontFamily="@font/roboto_light"
                                  android:text="XAF"
                                  android:textColor="@color/colorEU"
                                  android:textSize="@dimen/txt_small" />


                          </RelativeLayout>

                          <RelativeLayout
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="10dp">

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/amount"
                                  android:textSize="@dimen/txt_small"
                                  android:fontFamily="@font/roboto_light"
                                  android:textColor="@color/colorNoir" />

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/montant"
                                  android:textSize="@dimen/txt_normal"
                                  android:layout_alignParentRight="true"
                                  android:fontFamily="@font/roboto_light"
                                  android:textColor="@color/colorNoir" />


                          </RelativeLayout>

                          <RelativeLayout
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="10dp">

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/fees"
                                  android:textSize="@dimen/txt_small"
                                  android:fontFamily="@font/roboto_light"
                                  android:textColor="@color/colorNoir" />

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/frais"
                                  android:textSize="@dimen/txt_normal"
                                  android:layout_alignParentRight="true"
                                  android:fontFamily="@font/roboto_light"
                                  android:textColor="@color/colorNoir" />


                          </RelativeLayout>

                          <RelativeLayout
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="20dp">

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/total_amount"
                                  android:layout_centerVertical="true"
                                  android:textSize="@dimen/txt_small"
                                  android:fontFamily="@font/roboto_light"
                                  android:textColor="@color/colorNoir" />

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/montantTotal"
                                  android:textStyle="bold"
                                  android:textSize="@dimen/txt_titre"
                                  android:layout_alignParentRight="true"
                                  android:fontFamily="@font/roboto"
                                  android:textColor="@color/colorNoir" />


                          </RelativeLayout>

                      </LinearLayout>



                  </LinearLayout>



              </LinearLayout>

          </ScrollView>



        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/valider"
                android:background="@color/colorEU"
                android:fontFamily="@font/roboto_light"
                android:padding="7dp"
                android:text="VALIDER"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/colorBlancheS"
                android:textSize="@dimen/txt_normal" />


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </LinearLayout>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/premierLoader"
        android:background="@color/colorBlancheS">

        <ProgressBar
            android:id="@+id/progressBar111"
            style="?android:attr/progressBarStyle"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</RelativeLayout>